# arm-planning-is-not-magic

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/: __init__.py  collision_manager.py  path_smoothing.py  pose_utils.py  robot_model.py  state_space.py
core/kinematics/: __init__.py  opw.py  opw_parameters.py
demos/: 01_plan_and_time.py  02_toppra_vs_ruckig.py  03_compare_planners.py  04_collision_demo.py  05_visualization_demo.py  06_pybullet_visualization.py  07_multi_planner_visualization.py
docker/: .dockerignore  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml
docs/: 01_configuration_space.md  02_ik_vs_planning.md  03_collision_checking.md  04_sampling_based_planning.md  05_path_vs_trajectory.md  06_toppra.md  07_ruckig_vs_toppra.md  08_ceres_and_trajectory_optimization.md  09_siedel_and_linear_programming.md  10_controllers_and_execution.md
parameterization/: __init__.py  ruckig_parameterization.py  toppra_parameterization.py
planners/: __init__.py  base_ompl_planner.py  ompl_bitrrt.py  ompl_est.py  ompl_kpiece1.py  ompl_prm.py  ompl_rrt.py  ompl_rrt_connect.py  ompl_rrt_star.py
robots/ur5/: ur5.urdf
visualization/: __init__.py  path_3d.py  pybullet_visualizer.py  robot_visualizer.py  trajectory_plots.py
