[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arm-planning-is-not-magic"
version = "0.1.0"
description = "Motion planning library for robotic arms"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["core", "planners", "parameterization", "demos"]
